# neon_style

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation-request.md
.github/workflows/: PULL_REQUEST_TEMPLATE.md  changelog_check.yml  verified_commits_check.yml
docs/: CONTRIBUTING.md  GPG_key_setup.md  commit_convention.md
src/: align.rs  border.rs  color.rs  join.rs  lib.rs  main.rs  padding.rs  position.rs  renderer.rs  style.rs  whitespace.rs
